syntax = "proto3";
import "google/protobuf/empty.proto";

package Hikyaku.Kaido.GRPC;

service GrpcServices{
  rpc ManageHikyakuMessage(RequestMessage) returns (MessageResponse);
  rpc ManageHikyakuNotification(NotifyMessage) returns (google.protobuf.Empty);
}

message RequestMessage {
  string HikyakuType = 1;
  string Body = 2;
}

message MessageResponse {
  string Body = 1;
}

message NotifyMessage{
  string HikyakuType = 1;
  string Body = 2;
}
